--- a/style.css
+++ b/style.css
@@ -2,10 +2,38 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "verdana", sans-serif;
 }
 body{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+#changelog-container{
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 20px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+#progress-bar{
+    display: flex;
+    margin: 5px;
+}
+#dot-box , #progress-box, #date-box, .dot, .date, .progress  {
+   
+    margin: 10px;
+}
+#progress-box{
+    border-left: 2px solid black;
+    margin-left: 5px;
+}
+
+#dot-box{
+    transform: translateX(85%);
 }
